@@ -1,4 +1,5 @@
 0.06
+ - Fix issue with XML element in lowercase only.
  - Update Module::Install to 1.19 version.
 
 0.05 2016-03-23T21:22:44+01:00
